@@ -2289,3 +2289,7 @@ Created rcode_depth tool to convert to and from a 16-bit/pixel portable
 depth image encoding that uses a mix of linear and reciprocal distance
 with explicit representations of 0 and infinity.  Code for loading these
 depth maps is in src/util/depthcodec.{h,c}.
+
+Created rcode_norm tool to conver to and from 32-bit/pixel portable
+surface normal representation, matching the one in src/common/dircode.c.
+Code for loading normal maps is in src/util/normcodec.{h,c}.
